# issue3428

./: build.py  pyproject.toml
tests/: test_issue3428.py
